--- a/app/src/main/res/layout/activity_vegetables_retailer.xml
+++ b/app/src/main/res/layout/activity_vegetables_retailer.xml
@@ -23,7 +23,7 @@
         app:layout_constraintTop_toTopOf="parent">
 
         <ImageView
-            android:id="@+id/TomatoImage"
+            android:id="@+id/RetailerTomatoImage"
             android:layout_width="165dp"
             android:layout_height="170dp"
             android:layout_marginLeft="8dp"
@@ -31,108 +31,82 @@
             app:srcCompat="@drawable/Tomato" />
 
         <ImageView
-            android:id="@+id/OnionImage"
+            android:id="@+id/RetailerOnionImage"
             android:layout_width="165dp"
             android:layout_height="170dp"
-            android:layout_below="@+id/TomatoImage"
+            android:layout_below="@+id/RetailerTomatoImage"
             android:layout_marginLeft="8dp"
             android:layout_marginTop="40dp"
             app:srcCompat="@drawable/Onion" />
 
-        <ImageView
-            android:id="@+id/CarrotImage"
-            android:layout_width="165dp"
-            android:layout_height="170dp"
-            android:layout_below="@+id/OnionImage"
-            android:layout_marginLeft="8dp"
-            android:layout_marginTop="40dp"
-            app:srcCompat="@drawable/Carrot" />
+
 
         <Button
-            android:id="@+id/MyCartButton"
+            android:id="@+id/RetailerMyCartButton"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/CarrotImage"
+            android:layout_below="@+id/RetailerOnionImage"
             android:layout_marginLeft="250dp"
-            android:layout_marginTop="20dp"
+            android:layout_marginTop="100dp"
             android:layout_marginRight="16dp"
             android:text="My Cart" />
 
         <TextView
-            android:id="@+id/TomatoName"
+            android:id="@+id/RetailerTomatoName"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_alignTop="@+id/TomatoImage"
-            android:layout_toRightOf="@+id/TomatoImage"
+            android:layout_alignTop="@+id/RetailerTomatoImage"
+            android:layout_toRightOf="@+id/RetailerTomatoImage"
             android:layout_marginLeft="5dp"
             android:text="Tomato"
             android:textColor="#0E0608"
             android:textSize="18dp" />
 
         <TextView
-            android:id="@+id/OnionName"
+            android:id="@+id/RetailerOnionName"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_alignTop="@+id/OnionImage"
-            android:layout_toRightOf="@+id/OnionImage"
+            android:layout_alignTop="@+id/RetailerOnionImage"
+            android:layout_toRightOf="@+id/RetailerOnionImage"
             android:layout_marginLeft="5dp"
             android:text="Onion"
             android:textColor="#0E0608"
             android:textSize="18dp" />
 
-        <TextView
-            android:id="@+id/CarrotName"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_alignTop="@+id/CarrotImage"
-            android:layout_toRightOf="@+id/CarrotImage"
-            android:layout_marginLeft="5dp"
-            android:text="Carrot"
-            android:textColor="#0E0608"
-            android:textSize="18dp" />
+
 
         <TextView
-            android:id="@+id/TomatoCost"
+            android:id="@+id/RetailerTomatoCost"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@id/TomatoName"
-            android:layout_toRightOf="@id/TomatoImage"
+            android:layout_below="@id/RetailerTomatoName"
+            android:layout_toRightOf="@id/RetailerTomatoImage"
             android:layout_marginLeft="5dp"
-            android:text="Cost : Rs 25/piece"
+            android:text="Cost : Rs 40/1pcs"
             android:textColor="#0E0608"
             android:textSize="15dp"
             android:textStyle="bold" />
 
         <TextView
-            android:id="@+id/OnionCost"
+            android:id="@+id/RetailerOnionCost"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@id/OnionName"
-            android:layout_toRightOf="@id/OnionImage"
+            android:layout_below="@id/RetailerOnionName"
+            android:layout_toRightOf="@id/RetailerOnionImage"
             android:layout_marginLeft="5dp"
-            android:text="Cost : Rs 10/piece"
+            android:text="Cost : Rs 25/1pcs"
             android:textColor="#0E0608"
             android:textSize="15dp"
             android:textStyle="bold" />
 
-        <TextView
-            android:id="@+id/CarrotCost"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/CarrotName"
-            android:layout_toRightOf="@id/CarrotImage"
-            android:layout_marginLeft="5dp"
-            android:text="Cost : Rs 6/piece"
-            android:textColor="#0E0608"
-            android:textSize="15dp"
-            android:textStyle="bold" />
+
 
         <TextView
-            android:id="@+id/TomatoQuantity"
+            android:id="@+id/RetailerTomatoQuantity"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@id/TomatoCost"
-            android:layout_toRightOf="@id/TomatoImage"
+            android:layout_below="@id/RetailerTomatoCost"
+            android:layout_toRightOf="@id/RetailerTomatoImage"
             android:layout_marginLeft="5dp"
             android:textSize="15dp"
             android:text="Quantity"
@@ -140,151 +114,108 @@
             />
 
         <TextView
-            android:id="@+id/OnionQuantity"
+            android:id="@+id/RetailerOnionQuantity"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@id/OnionCost"
-            android:layout_toRightOf="@id/OnionImage"
+            android:layout_below="@id/RetailerOnionCost"
+            android:layout_toRightOf="@id/RetailerOnionImage"
             android:layout_marginLeft="5dp"
             android:textSize="15dp"
             android:text="Quantity"
             android:textColor="#0E0608"
             />
 
-        <TextView
-            android:id="@+id/CarrotQuantity"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/CarrotCost"
-            android:layout_toRightOf="@id/CarrotImage"
-            android:layout_marginLeft="5dp"
-            android:textSize="15dp"
-            android:text="Quantity"
-            android:textColor="#0E0608"
-            />
+
 
         <Button
-            android:id="@+id/TomatoQauntDecButton"
+            android:id="@+id/RetailerTomatoQauntDecButton"
             android:layout_width="40dp"
             android:layout_height="wrap_content"
-            android:layout_below="@id/TomatoQuantity"
-            android:onClick="decrementtomato"
+            android:layout_below="@id/RetailerTomatoQuantity"
+            android:onClick="decrementTomato"
             android:layout_marginLeft="53dp"
-            android:layout_toRightOf="@id/TomatoImage"
+            android:layout_toRightOf="@id/RetailerTomatoImage"
             android:text="-" />
 
         <TextView
-            android:id="@+id/TomatoQuantityValue"
+            android:id="@+id/RetailerTomatoQuantityValue"
             android:layout_width="33dp"
             android:layout_height="47dp"
-            android:layout_below="@id/TomatoQuantity"
+            android:layout_below="@id/RetailerTomatoQuantity"
             android:layout_marginRight="3dp"
             android:text="0"
             android:gravity="center"
-            android:layout_toLeftOf="@id/TomatoQauntIncButton"
-            android:layout_toRightOf="@id/TomatoQauntDecButton" />
+            android:layout_toLeftOf="@id/RetailerTomatoQauntIncButton"
+            android:layout_toRightOf="@id/RetailerTomatoQauntDecButton" />
 
         <Button
-            android:id="@+id/TomatoQauntIncButton"
+            android:id="@+id/RetailerTomatoQauntIncButton"
             android:layout_width="40dp"
             android:layout_height="wrap_content"
-            android:layout_below="@id/TomatoQuantity"
-            android:onClick="incrementtomato"
+            android:layout_below="@id/RetailerTomatoQuantity"
+            android:onClick="incrementTomato"
             android:layout_alignParentRight="true"
             android:layout_marginRight="46dp"
             android:text="+" />
 
         <Button
-            android:id="@+id/OnionQauntDecButton"
+            android:id="@+id/RetailerOnionQauntDecButton"
             android:layout_width="40dp"
             android:layout_height="wrap_content"
-            android:layout_below="@id/OnionQuantity"
-            android:onClick="decrementonion"
+            android:layout_below="@id/RetailerOnionQuantity"
+            android:onClick="decrementOnion"
             android:layout_marginLeft="53dp"
-            android:layout_toRightOf="@id/OnionImage"
+            android:layout_toRightOf="@id/RetailerOnionImage"
             android:text="-" />
 
         <TextView
-            android:id="@+id/OnionQuantityValue"
+            android:id="@+id/RetailerOnionQuantityValue"
             android:layout_width="33dp"
             android:layout_height="47dp"
-            android:layout_below="@id/OnionQuantity"
+            android:layout_below="@id/RetailerOnionQuantity"
             android:layout_marginRight="3dp"
             android:text="0"
             android:gravity="center"
-            android:layout_toLeftOf="@id/OnionQauntIncButton"
-            android:layout_toRightOf="@id/OnionQauntDecButton" />
+            android:layout_toLeftOf="@id/RetailerOnionQauntIncButton"
+            android:layout_toRightOf="@id/RetailerOnionQauntDecButton" />
 
         <Button
-            android:id="@+id/OnionQauntIncButton"
+            android:id="@+id/RetailerOnionQauntIncButton"
             android:layout_width="40dp"
             android:layout_height="wrap_content"
-            android:layout_below="@id/OnionQuantity"
-            android:onClick="incrementonion"
+            android:layout_below="@id/RetailerOnionQuantity"
+            android:onClick="incrementOnion"
             android:layout_alignParentRight="true"
             android:layout_marginRight="46dp"
             android:text="+" />
 
-        <Button
-            android:id="@+id/CarrotQauntDecButton"
-            android:layout_width="40dp"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/CarrotQuantity"
-            android:onClick="decrementCarrot"
-            android:layout_marginLeft="53dp"
-            android:layout_toRightOf="@id/CarrotImage"
-            android:text="-" />
 
-        <TextView
-            android:id="@+id/CarrotQuantityValue"
-            android:layout_width="33dp"
-            android:layout_height="47dp"
-            android:layout_below="@id/CarrotQuantity"
-            android:layout_marginRight="3dp"
-            android:text="0"
-            android:gravity="center"
-            android:layout_toLeftOf="@id/CarrotQauntIncButton"
-            android:layout_toRightOf="@id/CarrotQauntDecButton" />
+
+
+
+
 
         <Button
-            android:id="@+id/CarrotQauntIncButton"
-            android:layout_width="40dp"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/CarrotQuantity"
-            android:onClick="incrementcarrot"
-            android:layout_alignParentRight="true"
-            android:layout_marginRight="46dp"
-            android:text="+" />
-
-        <Button
-            android:id="@+id/TomatoQauntitySelectButton"
+            android:id="@+id/RetailerTomatoQauntitySelectButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_toRightOf="@id/TomatoImage"
-            android:layout_below="@id/TomatoQauntIncButton"
+            android:layout_toRightOf="@id/RetailerTomatoImage"
+            android:layout_below="@id/RetailerTomatoQauntIncButton"
             android:layout_marginLeft="88dp"
             android:text="Select"
             />
 
         <Button
-            android:id="@+id/OnionQauntitySelectButton"
+            android:id="@+id/RetailerOnionQauntitySelectButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_toRightOf="@id/OnionImage"
-            android:layout_below="@id/OnionQauntIncButton"
+            android:layout_toRightOf="@id/RetailerOnionImage"
+            android:layout_below="@id/RetailerOnionQauntIncButton"
             android:layout_marginLeft="88dp"
             android:text="Select"
             />
 
-        <Button
-            android:id="@+id/CarrotQauntitySelectButton"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_toRightOf="@id/CarrotImage"
-            android:layout_below="@id/CarrotQauntIncButton"
-            android:layout_marginLeft="88dp"
-            android:text="Select"
-            />
+
 
 
 
