--- a/app/src/main/res/layout/activity_fruits_customer.xml
+++ b/app/src/main/res/layout/activity_fruits_customer.xml
@@ -23,80 +23,64 @@
         app:layout_constraintTop_toTopOf="parent">
 
         <ImageView
-            android:id="@+id/AppleImage"
+            android:id="@+id/CustomerAppleImage"
             android:layout_width="165dp"
             android:layout_height="170dp"
             android:layout_marginLeft="8dp"
-            android:layout_marginTop="20dp"
+            android:layout_marginTop="100dp"
             app:srcCompat="@drawable/Apple" />
 
         <ImageView
-            android:id="@+id/OrangeImage"
+            android:id="@+id/CustomerOrangeImage"
             android:layout_width="165dp"
             android:layout_height="170dp"
-            android:layout_below="@+id/AppleImage"
+            android:layout_below="@+id/CustomerAppleImage"
             android:layout_marginLeft="8dp"
             android:layout_marginTop="40dp"
             app:srcCompat="@drawable/Orange" />
 
-        <ImageView
-            android:id="@+id/BananaImage"
-            android:layout_width="165dp"
-            android:layout_height="170dp"
-            android:layout_below="@+id/OrangeImage"
-            android:layout_marginLeft="8dp"
-            android:layout_marginTop="40dp"
-            app:srcCompat="@drawable/Banana" />
+
 
         <Button
-            android:id="@+id/MyCartButton"
+            android:id="@+id/CustomerMyCartButton"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/BananaImage"
+            android:layout_below="@+id/CustomerOrangeQauntitySelectButton"
             android:layout_marginLeft="250dp"
-            android:layout_marginTop="20dp"
+            android:layout_marginTop="100dp"
             android:layout_marginRight="16dp"
             android:text="My Cart" />
 
         <TextView
-            android:id="@+id/AppleName"
+            android:id="@+id/CustomerAppleName"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_alignTop="@+id/AppleImage"
-            android:layout_toRightOf="@+id/AppleImage"
+            android:layout_alignTop="@+id/CustomerAppleImage"
+            android:layout_toRightOf="@+id/CustomerAppleImage"
             android:layout_marginLeft="5dp"
             android:text="Apple"
             android:textColor="#0E0608"
             android:textSize="18dp" />
 
         <TextView
-            android:id="@+id/OrangeName"
+            android:id="@+id/CustomerOrangeName"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_alignTop="@+id/OrangeImage"
-            android:layout_toRightOf="@+id/OrangeImage"
+            android:layout_alignTop="@+id/CustomerOrangeImage"
+            android:layout_toRightOf="@+id/CustomerOrangeImage"
             android:layout_marginLeft="5dp"
             android:text="Orange"
             android:textColor="#0E0608"
             android:textSize="18dp" />
 
-        <TextView
-            android:id="@+id/BananaName"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_alignTop="@+id/BananaImage"
-            android:layout_toRightOf="@+id/BananaImage"
-            android:layout_marginLeft="5dp"
-            android:text="Banana"
-            android:textColor="#0E0608"
-            android:textSize="18dp" />
+
 
         <TextView
-            android:id="@+id/AppleCost"
+            android:id="@+id/CustomerAppleCost"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@id/AppleName"
-            android:layout_toRightOf="@id/AppleImage"
+            android:layout_below="@id/CustomerAppleName"
+            android:layout_toRightOf="@id/CustomerAppleImage"
             android:layout_marginLeft="5dp"
             android:text="Cost : Rs 40/1pcs"
             android:textColor="#0E0608"
@@ -104,35 +88,25 @@
             android:textStyle="bold" />
 
         <TextView
-            android:id="@+id/OrangeCost"
+            android:id="@+id/CustomerOrangeCost"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@id/OrangeName"
-            android:layout_toRightOf="@id/OrangeImage"
+            android:layout_below="@id/CustomerOrangeName"
+            android:layout_toRightOf="@id/CustomerOrangeImage"
             android:layout_marginLeft="5dp"
             android:text="Cost : Rs 25/1pcs"
             android:textColor="#0E0608"
             android:textSize="15dp"
             android:textStyle="bold" />
 
-        <TextView
-            android:id="@+id/BananaCost"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/BananaName"
-            android:layout_toRightOf="@id/BananaImage"
-            android:layout_marginLeft="5dp"
-            android:text="Cost : Rs 5/1pcs"
-            android:textColor="#0E0608"
-            android:textSize="15dp"
-            android:textStyle="bold" />
+
 
         <TextView
-            android:id="@+id/AppleQuantity"
+            android:id="@+id/CustomerAppleQuantity"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@id/AppleCost"
-            android:layout_toRightOf="@id/AppleImage"
+            android:layout_below="@id/CustomerAppleCost"
+            android:layout_toRightOf="@id/CustomerAppleImage"
             android:layout_marginLeft="5dp"
             android:textSize="15dp"
             android:text="Quantity"
@@ -140,151 +114,106 @@
             />
 
         <TextView
-            android:id="@+id/OrangeQuantity"
+            android:id="@+id/CustomerOrangeQuantity"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@id/OrangeCost"
-            android:layout_toRightOf="@id/OrangeImage"
+            android:layout_below="@id/CustomerOrangeCost"
+            android:layout_toRightOf="@id/CustomerOrangeImage"
             android:layout_marginLeft="5dp"
             android:textSize="15dp"
             android:text="Quantity"
             android:textColor="#0E0608"
             />
 
-        <TextView
-            android:id="@+id/BananaQuantity"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/BananaCost"
-            android:layout_toRightOf="@id/BananaImage"
-            android:layout_marginLeft="5dp"
-            android:textSize="15dp"
-            android:text="Quantity"
-            android:textColor="#0E0608"
-            />
+
 
         <Button
-            android:id="@+id/AppleQauntDecButton"
+            android:id="@+id/CustomerAppleQauntDecButton"
             android:layout_width="40dp"
             android:layout_height="wrap_content"
-            android:layout_below="@id/AppleQuantity"
+            android:layout_below="@id/CustomerAppleQuantity"
             android:onClick="decrementapple"
             android:layout_marginLeft="53dp"
-            android:layout_toRightOf="@id/AppleImage"
+            android:layout_toRightOf="@id/CustomerAppleImage"
             android:text="-" />
 
         <TextView
-            android:id="@+id/AppleQuantityValue"
+            android:id="@+id/CustomerAppleQuantityValue"
             android:layout_width="33dp"
             android:layout_height="47dp"
-            android:layout_below="@id/AppleQuantity"
+            android:layout_below="@id/CustomerAppleQuantity"
             android:layout_marginRight="3dp"
             android:text="0"
             android:gravity="center"
-            android:layout_toLeftOf="@id/AppleQauntIncButton"
-            android:layout_toRightOf="@id/AppleQauntDecButton" />
+            android:layout_toLeftOf="@id/CustomerAppleQauntIncButton"
+            android:layout_toRightOf="@id/CustomerAppleQauntDecButton" />
 
         <Button
-            android:id="@+id/AppleQauntIncButton"
+            android:id="@+id/CustomerAppleQauntIncButton"
             android:layout_width="40dp"
             android:layout_height="wrap_content"
-            android:layout_below="@id/AppleQuantity"
+            android:layout_below="@id/CustomerAppleQuantity"
             android:onClick="incrementapple"
             android:layout_alignParentRight="true"
             android:layout_marginRight="46dp"
             android:text="+" />
 
         <Button
-            android:id="@+id/OrangeQauntDecButton"
+            android:id="@+id/CustomerOrangeQauntDecButton"
             android:layout_width="40dp"
             android:layout_height="wrap_content"
-            android:layout_below="@id/OrangeQuantity"
+            android:layout_below="@id/CustomerOrangeQuantity"
             android:onClick="decrementorange"
             android:layout_marginLeft="53dp"
-            android:layout_toRightOf="@id/OrangeImage"
+            android:layout_toRightOf="@id/CustomerOrangeImage"
             android:text="-" />
 
         <TextView
-            android:id="@+id/OrangeQuantityValue"
+            android:id="@+id/CustomerOrangeQuantityValue"
             android:layout_width="33dp"
             android:layout_height="47dp"
-            android:layout_below="@id/OrangeQuantity"
+            android:layout_below="@id/CustomerOrangeQuantity"
             android:layout_marginRight="3dp"
             android:text="0"
             android:gravity="center"
-            android:layout_toLeftOf="@id/OrangeQauntIncButton"
-            android:layout_toRightOf="@id/OrangeQauntDecButton" />
+            android:layout_toLeftOf="@id/CustomerOrangeQauntIncButton"
+            android:layout_toRightOf="@id/CustomerOrangeQauntDecButton" />
 
         <Button
-            android:id="@+id/OrangeQauntIncButton"
+            android:id="@+id/CustomerOrangeQauntIncButton"
             android:layout_width="40dp"
             android:layout_height="wrap_content"
-            android:layout_below="@id/OrangeQuantity"
+            android:layout_below="@id/CustomerOrangeQuantity"
             android:onClick="incrementorange"
             android:layout_alignParentRight="true"
             android:layout_marginRight="46dp"
             android:text="+" />
 
-        <Button
-            android:id="@+id/BananaQauntDecButton"
-            android:layout_width="40dp"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/BananaQuantity"
-            android:onClick="decrementbanana"
-            android:layout_marginLeft="53dp"
-            android:layout_toRightOf="@id/BananaImage"
-            android:text="-" />
 
-        <TextView
-            android:id="@+id/BananaQuantityValue"
-            android:layout_width="33dp"
-            android:layout_height="47dp"
-            android:layout_below="@id/BananaQuantity"
-            android:layout_marginRight="3dp"
-            android:text="0"
-            android:gravity="center"
-            android:layout_toLeftOf="@id/BananaQauntIncButton"
-            android:layout_toRightOf="@id/BananaQauntDecButton" />
+
+
 
         <Button
-            android:id="@+id/BananaQauntIncButton"
-            android:layout_width="40dp"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/BananaQuantity"
-            android:onClick="incrementbanana"
-            android:layout_alignParentRight="true"
-            android:layout_marginRight="46dp"
-            android:text="+" />
-
-        <Button
-            android:id="@+id/AppleQauntitySelectButton"
+            android:id="@+id/CustomerAppleQauntitySelectButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_toRightOf="@id/AppleImage"
-            android:layout_below="@id/AppleQauntIncButton"
+            android:layout_toRightOf="@id/CustomerAppleImage"
+            android:layout_below="@id/CustomerAppleQauntIncButton"
             android:layout_marginLeft="88dp"
             android:text="Select"
             />
 
         <Button
-            android:id="@+id/OrangeQauntitySelectButton"
+            android:id="@+id/CustomerOrangeQauntitySelectButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_toRightOf="@id/OrangeImage"
-            android:layout_below="@id/OrangeQauntIncButton"
+            android:layout_toRightOf="@id/CustomerOrangeImage"
+            android:layout_below="@id/CustomerOrangeQauntIncButton"
             android:layout_marginLeft="88dp"
             android:text="Select"
             />
 
-        <Button
-            android:id="@+id/BananaQauntitySelectButton"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_toRightOf="@id/BananaImage"
-            android:layout_below="@id/BananaQauntIncButton"
-            android:layout_marginLeft="88dp"
-            android:text="Select"
-            />
+
 
 
 
