--- a/app/src/main/res/layout/activity_fruits_retailer.xml
+++ b/app/src/main/res/layout/activity_fruits_retailer.xml
@@ -23,116 +23,90 @@
         app:layout_constraintTop_toTopOf="parent">
 
         <ImageView
-            android:id="@+id/AppleImage"
+            android:id="@+id/RetailerAppleImage"
             android:layout_width="165dp"
             android:layout_height="170dp"
             android:layout_marginLeft="8dp"
-            android:layout_marginTop="20dp"
+            android:layout_marginTop="100dp"
             app:srcCompat="@drawable/Apple" />
 
         <ImageView
-            android:id="@+id/OrangeImage"
+            android:id="@+id/RetailerOrangeImage"
             android:layout_width="165dp"
             android:layout_height="170dp"
-            android:layout_below="@+id/AppleImage"
+            android:layout_below="@+id/RetailerAppleImage"
             android:layout_marginLeft="8dp"
             android:layout_marginTop="40dp"
             app:srcCompat="@drawable/Orange" />
 
-        <ImageView
-            android:id="@+id/BananaImage"
-            android:layout_width="165dp"
-            android:layout_height="170dp"
-            android:layout_below="@+id/OrangeImage"
-            android:layout_marginLeft="8dp"
-            android:layout_marginTop="40dp"
-            app:srcCompat="@drawable/Banana" />
+
 
         <Button
-            android:id="@+id/MyCartButton"
+            android:id="@+id/RetailerMyCartButton"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/BananaImage"
+            android:layout_below="@+id/RetailerOrangeQauntitySelectButton"
             android:layout_marginLeft="250dp"
-            android:layout_marginTop="20dp"
+            android:layout_marginTop="100dp"
             android:layout_marginRight="16dp"
             android:text="My Cart" />
 
         <TextView
-            android:id="@+id/AppleName"
+            android:id="@+id/RetailerAppleName"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_alignTop="@+id/AppleImage"
-            android:layout_toRightOf="@+id/AppleImage"
+            android:layout_alignTop="@+id/RetailerAppleImage"
+            android:layout_toRightOf="@+id/RetailerAppleImage"
             android:layout_marginLeft="5dp"
             android:text="Apple"
             android:textColor="#0E0608"
             android:textSize="18dp" />
 
         <TextView
-            android:id="@+id/OrangeName"
+            android:id="@+id/RetailerOrangeName"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_alignTop="@+id/OrangeImage"
-            android:layout_toRightOf="@+id/OrangeImage"
+            android:layout_alignTop="@+id/RetailerOrangeImage"
+            android:layout_toRightOf="@+id/RetailerOrangeImage"
             android:layout_marginLeft="5dp"
             android:text="Orange"
             android:textColor="#0E0608"
             android:textSize="18dp" />
 
-        <TextView
-            android:id="@+id/BananaName"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_alignTop="@+id/BananaImage"
-            android:layout_toRightOf="@+id/BananaImage"
-            android:layout_marginLeft="5dp"
-            android:text="Banana"
-            android:textColor="#0E0608"
-            android:textSize="18dp" />
+
 
         <TextView
-            android:id="@+id/AppleCost"
+            android:id="@+id/RetailerAppleCost"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@id/AppleName"
-            android:layout_toRightOf="@id/AppleImage"
+            android:layout_below="@id/RetailerAppleName"
+            android:layout_toRightOf="@id/RetailerAppleImage"
             android:layout_marginLeft="5dp"
-            android:text="Cost : Rs 35/1pcs"
+            android:text="Cost : Rs 40/1pcs"
             android:textColor="#0E0608"
             android:textSize="15dp"
             android:textStyle="bold" />
 
         <TextView
-            android:id="@+id/OrangeCost"
+            android:id="@+id/RetailerOrangeCost"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@id/OrangeName"
-            android:layout_toRightOf="@id/OrangeImage"
+            android:layout_below="@id/RetailerOrangeName"
+            android:layout_toRightOf="@id/RetailerOrangeImage"
             android:layout_marginLeft="5dp"
-            android:text="Cost : Rs 20/1pcs"
+            android:text="Cost : Rs 25/1pcs"
             android:textColor="#0E0608"
             android:textSize="15dp"
             android:textStyle="bold" />
 
-        <TextView
-            android:id="@+id/BananaCost"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/BananaName"
-            android:layout_toRightOf="@id/BananaImage"
-            android:layout_marginLeft="5dp"
-            android:text="Cost : Rs 3/1pcs"
-            android:textColor="#0E0608"
-            android:textSize="15dp"
-            android:textStyle="bold" />
+
 
         <TextView
-            android:id="@+id/AppleQuantity"
+            android:id="@+id/RetailerAppleQuantity"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@id/AppleCost"
-            android:layout_toRightOf="@id/AppleImage"
+            android:layout_below="@id/RetailerAppleCost"
+            android:layout_toRightOf="@id/RetailerAppleImage"
             android:layout_marginLeft="5dp"
             android:textSize="15dp"
             android:text="Quantity"
@@ -140,151 +114,106 @@
             />
 
         <TextView
-            android:id="@+id/OrangeQuantity"
+            android:id="@+id/RetailerOrangeQuantity"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@id/OrangeCost"
-            android:layout_toRightOf="@id/OrangeImage"
+            android:layout_below="@id/RetailerOrangeCost"
+            android:layout_toRightOf="@id/RetailerOrangeImage"
             android:layout_marginLeft="5dp"
             android:textSize="15dp"
             android:text="Quantity"
             android:textColor="#0E0608"
             />
 
-        <TextView
-            android:id="@+id/BananaQuantity"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/BananaCost"
-            android:layout_toRightOf="@id/BananaImage"
-            android:layout_marginLeft="5dp"
-            android:textSize="15dp"
-            android:text="Quantity"
-            android:textColor="#0E0608"
-            />
+
 
         <Button
-            android:id="@+id/AppleQauntDecButton"
+            android:id="@+id/RetailerAppleQauntDecButton"
             android:layout_width="40dp"
             android:layout_height="wrap_content"
-            android:layout_below="@id/AppleQuantity"
+            android:layout_below="@id/RetailerAppleQuantity"
             android:onClick="decrementapple"
             android:layout_marginLeft="53dp"
-            android:layout_toRightOf="@id/AppleImage"
+            android:layout_toRightOf="@id/RetailerAppleImage"
             android:text="-" />
 
         <TextView
-            android:id="@+id/AppleQuantityValue"
+            android:id="@+id/RetailerAppleQuantityValue"
             android:layout_width="33dp"
             android:layout_height="47dp"
-            android:layout_below="@id/AppleQuantity"
+            android:layout_below="@id/RetailerAppleQuantity"
             android:layout_marginRight="3dp"
             android:text="0"
             android:gravity="center"
-            android:layout_toLeftOf="@id/AppleQauntIncButton"
-            android:layout_toRightOf="@id/AppleQauntDecButton" />
+            android:layout_toLeftOf="@id/RetailerAppleQauntIncButton"
+            android:layout_toRightOf="@id/RetailerAppleQauntDecButton" />
 
         <Button
-            android:id="@+id/AppleQauntIncButton"
+            android:id="@+id/RetailerAppleQauntIncButton"
             android:layout_width="40dp"
             android:layout_height="wrap_content"
-            android:layout_below="@id/AppleQuantity"
+            android:layout_below="@id/RetailerAppleQuantity"
             android:onClick="incrementapple"
             android:layout_alignParentRight="true"
             android:layout_marginRight="46dp"
             android:text="+" />
 
         <Button
-            android:id="@+id/OrangeQauntDecButton"
+            android:id="@+id/RetailerOrangeQauntDecButton"
             android:layout_width="40dp"
             android:layout_height="wrap_content"
-            android:layout_below="@id/OrangeQuantity"
+            android:layout_below="@id/RetailerOrangeQuantity"
             android:onClick="decrementorange"
             android:layout_marginLeft="53dp"
-            android:layout_toRightOf="@id/OrangeImage"
+            android:layout_toRightOf="@id/RetailerOrangeImage"
             android:text="-" />
 
         <TextView
-            android:id="@+id/OrangeQuantityValue"
+            android:id="@+id/RetailerOrangeQuantityValue"
             android:layout_width="33dp"
             android:layout_height="47dp"
-            android:layout_below="@id/OrangeQuantity"
+            android:layout_below="@id/RetailerOrangeQuantity"
             android:layout_marginRight="3dp"
             android:text="0"
             android:gravity="center"
-            android:layout_toLeftOf="@id/OrangeQauntIncButton"
-            android:layout_toRightOf="@id/OrangeQauntDecButton" />
+            android:layout_toLeftOf="@id/RetailerOrangeQauntIncButton"
+            android:layout_toRightOf="@id/RetailerOrangeQauntDecButton" />
 
         <Button
-            android:id="@+id/OrangeQauntIncButton"
+            android:id="@+id/RetailerOrangeQauntIncButton"
             android:layout_width="40dp"
             android:layout_height="wrap_content"
-            android:layout_below="@id/OrangeQuantity"
+            android:layout_below="@id/RetailerOrangeQuantity"
             android:onClick="incrementorange"
             android:layout_alignParentRight="true"
             android:layout_marginRight="46dp"
             android:text="+" />
 
-        <Button
-            android:id="@+id/BananaQauntDecButton"
-            android:layout_width="40dp"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/BananaQuantity"
-            android:onClick="decrementbanana"
-            android:layout_marginLeft="53dp"
-            android:layout_toRightOf="@id/BananaImage"
-            android:text="-" />
 
-        <TextView
-            android:id="@+id/BananaQuantityValue"
-            android:layout_width="33dp"
-            android:layout_height="47dp"
-            android:layout_below="@id/BananaQuantity"
-            android:layout_marginRight="3dp"
-            android:text="0"
-            android:gravity="center"
-            android:layout_toLeftOf="@id/BananaQauntIncButton"
-            android:layout_toRightOf="@id/BananaQauntDecButton" />
+
+
 
         <Button
-            android:id="@+id/BananaQauntIncButton"
-            android:layout_width="40dp"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/BananaQuantity"
-            android:onClick="incrementbanana"
-            android:layout_alignParentRight="true"
-            android:layout_marginRight="46dp"
-            android:text="+" />
-
-        <Button
-            android:id="@+id/AppleQauntitySelectButton"
+            android:id="@+id/RetailerAppleQauntitySelectButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_toRightOf="@id/AppleImage"
-            android:layout_below="@id/AppleQauntIncButton"
+            android:layout_toRightOf="@id/RetailerAppleImage"
+            android:layout_below="@id/RetailerAppleQauntIncButton"
             android:layout_marginLeft="88dp"
             android:text="Select"
             />
 
         <Button
-            android:id="@+id/OrangeQauntitySelectButton"
+            android:id="@+id/RetailerOrangeQauntitySelectButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_toRightOf="@id/OrangeImage"
-            android:layout_below="@id/OrangeQauntIncButton"
+            android:layout_toRightOf="@id/RetailerOrangeImage"
+            android:layout_below="@id/RetailerOrangeQauntIncButton"
             android:layout_marginLeft="88dp"
             android:text="Select"
             />
 
-        <Button
-            android:id="@+id/BananaQauntitySelectButton"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_toRightOf="@id/BananaImage"
-            android:layout_below="@id/BananaQauntIncButton"
-            android:layout_marginLeft="88dp"
-            android:text="Select"
-            />
+
 
 
 
