--- a/app/src/main/res/layout/activity_fruits_wholesaler.xml
+++ b/app/src/main/res/layout/activity_fruits_wholesaler.xml
@@ -23,98 +23,81 @@
         app:layout_constraintTop_toTopOf="parent">
 
         <ImageView
-            android:id="@+id/AppleImage"
+            android:id="@+id/WholesalerAppleImage"
             android:layout_width="165dp"
             android:layout_height="170dp"
             android:layout_marginLeft="8dp"
-            android:layout_marginTop="20dp"
+            android:layout_marginTop="100dp"
             app:srcCompat="@drawable/Apple" />
 
         <ImageView
-            android:id="@+id/OrangeImage"
+            android:id="@+id/WholesalerOrangeImage"
             android:layout_width="165dp"
             android:layout_height="170dp"
-            android:layout_below="@+id/AppleImage"
+            android:layout_below="@+id/WholesalerAppleImage"
             android:layout_marginLeft="8dp"
             android:layout_marginTop="40dp"
             app:srcCompat="@drawable/Orange" />
 
-        <ImageView
-            android:id="@+id/BananaImage"
-            android:layout_width="165dp"
-            android:layout_height="170dp"
-            android:layout_below="@+id/OrangeImage"
-            android:layout_marginLeft="8dp"
-            android:layout_marginTop="40dp"
-            app:srcCompat="@drawable/Banana" />
 
 
-        <TextView
-            android:id="@+id/AppleName"
+        <Button
+            android:id="@+id/WholesalerMyCartButton"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_alignTop="@+id/AppleImage"
-            android:layout_toRightOf="@+id/AppleImage"
+            android:layout_below="@+id/WholesalerOrangeImage"
+            android:layout_marginLeft="250dp"
+            android:layout_marginTop="100dp"
+            android:layout_marginRight="16dp"
+            android:text="My Cart" />
+
+        <TextView
+            android:id="@+id/WholesalerAppleName"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignTop="@+id/WholesalerAppleImage"
+            android:layout_toRightOf="@+id/WholesalerAppleImage"
             android:layout_marginLeft="5dp"
             android:text="Apple"
             android:textColor="#0E0608"
             android:textSize="18dp" />
 
         <TextView
-            android:id="@+id/OrangeName"
+            android:id="@+id/WholesalerOrangeName"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_alignTop="@+id/OrangeImage"
-            android:layout_toRightOf="@+id/OrangeImage"
+            android:layout_alignTop="@+id/WholesalerOrangeImage"
+            android:layout_toRightOf="@+id/WholesalerOrangeImage"
             android:layout_marginLeft="5dp"
             android:text="Orange"
             android:textColor="#0E0608"
             android:textSize="18dp" />
 
-        <TextView
-            android:id="@+id/BananaName"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_alignTop="@+id/BananaImage"
-            android:layout_toRightOf="@+id/BananaImage"
-            android:layout_marginLeft="5dp"
-            android:text="Banana"
-            android:textColor="#0E0608"
-            android:textSize="18dp" />
+
 
 
         <Button
-            android:id="@+id/AppleQauntitySelectButton"
+            android:id="@+id/WholesalerAppleQauntitySelectButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_toRightOf="@id/AppleImage"
-            android:layout_below="@id/AppleName"
-            android:layout_marginTop="100dp"
+            android:layout_marginTop="50dp"
+            android:layout_toRightOf="@id/WholesalerAppleImage"
+            android:layout_below="@id/WholesalerAppleName"
             android:layout_marginLeft="88dp"
             android:text="Select"
             />
 
         <Button
-            android:id="@+id/OrangeQauntitySelectButton"
+            android:id="@+id/WholesalerOrangeQauntitySelectButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_toRightOf="@id/OrangeImage"
-            android:layout_below="@id/OrangeName"
-            android:layout_marginTop="100dp"
+            android:layout_marginTop="50dp"
+            android:layout_toRightOf="@id/WholesalerOrangeImage"
+            android:layout_below="@id/WholesalerOrangeName"
             android:layout_marginLeft="88dp"
             android:text="Select"
             />
 
-        <Button
-            android:id="@+id/BananaQauntitySelectButton"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_toRightOf="@id/BananaImage"
-            android:layout_below="@id/BananaName"
-            android:layout_marginTop="100dp"
-            android:layout_marginLeft="88dp"
-            android:text="Select"
-            />
 
 
 
