--- a/app/src/main/res/layout/activity_fruits_customer.xml
+++ b/app/src/main/res/layout/activity_fruits_customer.xml
@@ -28,7 +28,8 @@
             android:layout_height="170dp"
             android:layout_marginLeft="8dp"
             android:layout_marginTop="100dp"
-            app:srcCompat="@drawable/Apple" />
+
+            app:srcCompat="@drawable/applefruit" />
 
         <ImageView
             android:id="@+id/CustomerOrangeImage"
@@ -37,7 +38,7 @@
             android:layout_below="@+id/CustomerAppleImage"
             android:layout_marginLeft="8dp"
             android:layout_marginTop="40dp"
-            app:srcCompat="@drawable/Orange" />
+            app:srcCompat="@drawable/orangefruit" />
 
 
 
