--- a/app/src/main/res/layout/activity_meat_wholesaler.xml
+++ b/app/src/main/res/layout/activity_meat_wholesaler.xml
@@ -28,7 +28,7 @@
             android:layout_height="170dp"
             android:layout_marginLeft="8dp"
             android:layout_marginTop="20dp"
-            app:srcCompat="@drawable/Chicken" />
+            app:srcCompat="@drawable/chickenmeat" />
 
         <ImageView
             android:id="@+id/FishImage"
@@ -37,7 +37,7 @@
             android:layout_below="@+id/ChickenImage"
             android:layout_marginLeft="8dp"
             android:layout_marginTop="40dp"
-            app:srcCompat="@drawable/Fish" />
+            app:srcCompat="@drawable/fishmeat" />
 
         <ImageView
             android:id="@+id/MuttonImage"
@@ -46,7 +46,7 @@
             android:layout_below="@+id/FishImage"
             android:layout_marginLeft="8dp"
             android:layout_marginTop="40dp"
-            app:srcCompat="@drawable/Mutton" />
+            app:srcCompat="@drawable/muttonmeat" />
 
 
         <TextView
