--- a/app/src/main/res/layout/activity_vegetables_customer.xml
+++ b/app/src/main/res/layout/activity_vegetables_customer.xml
@@ -28,7 +28,7 @@
             android:layout_height="170dp"
             android:layout_marginLeft="8dp"
             android:layout_marginTop="60dp"
-            app:srcCompat="@drawable/Tomato" />
+            app:srcCompat="@drawable/tomatovegetable" />
 
         <ImageView
             android:id="@+id/CustomerOnionImage"
@@ -37,7 +37,7 @@
             android:layout_below="@+id/CustomerTomatoImage"
             android:layout_marginLeft="8dp"
             android:layout_marginTop="40dp"
-            app:srcCompat="@drawable/Onion" />
+            app:srcCompat="@drawable/onionvegetable" />
 
 
 
