--- a/app/src/main/res/layout/activity_vegetables_retailer.xml
+++ b/app/src/main/res/layout/activity_vegetables_retailer.xml
@@ -28,7 +28,7 @@
             android:layout_height="170dp"
             android:layout_marginLeft="8dp"
             android:layout_marginTop="20dp"
-            app:srcCompat="@drawable/Tomato" />
+            app:srcCompat="@drawable/tomatovegetable" />
 
         <ImageView
             android:id="@+id/RetailerOnionImage"
@@ -37,7 +37,7 @@
             android:layout_below="@+id/RetailerTomatoImage"
             android:layout_marginLeft="8dp"
             android:layout_marginTop="40dp"
-            app:srcCompat="@drawable/Onion" />
+            app:srcCompat="@drawable/onionvegetable" />
 
 
 
